# zeroclaw

./: .dockerignore  .env.example  .gitignore  .gitmodules  .imgbotconfig  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG-next.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  Dockerfile.ci  Dockerfile.debian  Makefile  README.md  clippy.toml  deny.toml  docker-compose.yml  flake.nix  index.html  install.sh  setup.bat  versions.json
apps/zerocode/: Cargo.toml  build.rs
apps/zerocode/src/: acp.rs  app.rs  attachment.rs  chat.rs  client.rs  clipboard.rs  color_depth.rs  config_manager.rs  dashboard.rs  diff.rs  doctor.rs  editor.rs  file_explorer.rs  help.rs  i18n.rs  input_bar.rs  jsonrpc.rs  lib.rs  logs.rs  main.rs  mouse.rs  quickstart_pane.rs  theme.rs  turn_status.rs  widgets.rs  wire.rs  zerocode_pane.rs
crates/aardvark-sys/: Cargo.toml
crates/zeroclaw-api/: Cargo.toml
crates/zeroclaw-api/src/: agent.rs  attribution.rs  channel.rs  elicitation.rs  hook.rs  ingress.rs  jsonrpc.rs  lib.rs  media.rs  memory_traits.rs  model_provider.rs  observability_traits.rs  peripherals_traits.rs  platform.rs  principal.rs  runtime_traits.rs  schema.rs  tool.rs
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-channels/src/: acp_channel.rs  allowlist.rs  amqp.rs  bluesky.rs  clawdtalk.rs  cli.rs  dingtalk.rs  discord.rs  discord_slash_state.rs  email_channel.rs  filesystem.rs  gmail_push.rs  imessage.rs  irc.rs  lark.rs  lib.rs  line.rs  link_enricher.rs  linq.rs  listing.rs  matrix.rs  mattermost.rs  mochat.rs  nextcloud_talk.rs  nostr.rs  notion.rs  paced_channel.rs  qq.rs  reddit.rs  signal.rs  slack.rs  telegram.rs  transcription.rs  tts.rs  twitch.rs  twitter.rs  util.rs  voice.rs  voice_call.rs  voice_wake.rs  (+8 more)
crates/zeroclaw-channels/tests/: lark_approval_live_evidence.rs  orchestrator_mcp_scope.rs  pacing_integration.rs  proof_orchestrator_session_context.rs
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-config/fixtures/: v1.toml
crates/zeroclaw-config/src/: alias_refs.rs  api_error.rs  autonomy.rs  comment_writer.rs  domain_matcher.rs  env_overrides.rs  field_visibility.rs  helpers.rs  lib.rs  migration.rs  multi_agent.rs  pairing.rs  paths.rs  policy.rs  presets.rs  provider_aliases.rs  providers.rs  scattered_types.rs  schema.rs  schema_markdown.rs  secrets.rs  sections.rs  skill_bundles.rs  traits.rs  typed_value.rs  validation_warnings.rs
crates/zeroclaw-config/tests/: comment_writer.rs  migration.rs
crates/zeroclaw-eval/: Cargo.toml  README.md
crates/zeroclaw-eval/src/: case.rs  grader.rs  lib.rs  observer.rs  record.rs  replay.rs  report.rs  runner.rs  tools.rs
crates/zeroclaw-gateway/: Cargo.toml  build.rs
crates/zeroclaw-gateway/src/: a2a.rs  acp.rs  agent_owned_state.rs  api.rs  api_browse.rs  api_config.rs  api_logs.rs  api_onboard.rs  api_pairing.rs  api_personality.rs  api_plugins.rs  api_quickstart.rs  api_sections.rs  api_skills.rs  api_sop.rs  api_update.rs  api_webauthn.rs  api_webhook.rs  auth_rate_limit.rs  canvas.rs  hardware_context.rs  lib.rs  node_tool.rs  nodes.rs  openapi.rs  session_queue.rs  sse.rs  static_files.rs  tls.rs  voice_duplex.rs  ws.rs  ws_approval.rs
crates/zeroclaw-hardware/: Cargo.toml
crates/zeroclaw-hardware/examples/: esp32_sim.rs  esp32_sim_frontend.html
crates/zeroclaw-hardware/src/: aardvark_tools.rs  catalog.rs  datasheet.rs  device.rs  discover.rs  gpio.rs  introspect.rs  lib.rs  loader.rs  pico_code.rs  pico_flash.rs  registry.rs  rpi.rs  serial.rs  subprocess.rs  tool_registry.rs  uf2.rs  util.rs
crates/zeroclaw-infra/: Cargo.toml
crates/zeroclaw-infra/src/: acp_session_store.rs  debounce.rs  lib.rs  net_guard.rs  session_backend.rs  session_queue.rs  session_sqlite.rs  session_store.rs  stall_watchdog.rs
crates/zeroclaw-infra/tests/: proof_session_routing_columns.rs
crates/zeroclaw-log/: Cargo.toml
crates/zeroclaw-log/src/: broadcast.rs  chain.rs  config.rs  event.rs  layer.rs  lib.rs  macro.rs  migrate.rs  observer_bridge.rs  reader.rs  subscriber.rs  tool_io.rs  writer.rs
crates/zeroclaw-memory/: Cargo.toml
crates/zeroclaw-memory/src/: agent_scoped.rs  agent_scoped_markdown.rs  audit.rs  backend.rs  budget.rs  conflict.rs  consolidation.rs  decay.rs  dedup.rs  embeddings.rs  hygiene.rs  importance.rs  knowledge_graph.rs  knowledge_graph_pg.rs  lib.rs  lucid.rs  markdown.rs  merge.rs  none.rs  policy.rs  policy_gate.rs  postgres.rs  qdrant.rs  response_cache.rs  retrieval.rs  snapshot.rs  sqlite.rs
crates/zeroclaw-memory/tests/: agent_migration.rs
crates/zeroclaw-plugins/: AGENTS.md  Cargo.toml
crates/zeroclaw-plugins/src/: component.rs  component_logging.rs  host.rs  lib.rs  registry.rs  runtime.rs  signature.rs  wasm_channel.rs  wasm_memory.rs  wasm_tool.rs
crates/zeroclaw-plugins/tests/: reference_plugin.rs  reference_plugin_e2e.rs
crates/zeroclaw-providers/: Cargo.toml
crates/zeroclaw-providers/src/: anthropic.rs  azure_openai.rs  bedrock.rs  catalog.rs  compatible.rs  copilot.rs  dispatch.rs  factory.rs  gemini.rs  gemini_cli.rs  glm.rs  kilocli.rs  lib.rs  model_pin.rs  models_dev.rs  multimodal.rs  ollama.rs  openai.rs  openai_codex.rs  openrouter.rs  openrouter_catalog.rs  reliable.rs  request_payload.rs  router.rs  stream_guard.rs  telnyx.rs  traits.rs
crates/zeroclaw-providers/tests/: dispatch_integration.rs
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-runtime/src/: browse.rs  cli_input.rs  i18n.rs  identity.rs  lib.rs  migration.rs  peers.rs  process_stats.rs  updater.rs  util.rs
crates/zeroclaw-runtime/tests/: scheduled_no_conversation_leak_5415.rs
crates/zeroclaw-spawn/: Cargo.toml
crates/zeroclaw-spawn/src/: lib.rs
crates/zeroclaw-tool-call-parser/: Cargo.toml
crates/zeroclaw-tool-call-parser/src/: lib.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: ask_user.rs  attribution.rs  backup_tool.rs  browser.rs  browser_delegate.rs  browser_open.rs  calculator.rs  canvas.rs  channel_room.rs  claude_code.rs  composio.rs  (+70 more)
tools/fill-translations/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: lib.rs  util.rs
(+18991 files in other folders)
