[package]
name = "zerocode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive TUI config manager for ZeroClaw."
publish = false

[[bin]]
name = "zerocode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
similar = { version = "2", default-features = false, features = ["text"] }
inkjet = { version = "0.11", default-features = false, features = [
    "language-rust", "language-python", "language-javascript", "language-typescript",
    "language-json", "language-toml", "language-yaml", "language-go", "language-c",
    "language-cpp", "language-html", "language-css", "language-bash",
    "language-sql", "language-ruby", "language-java", "language-kotlin",
    "language-swift", "language-lua", "language-dockerfile", "language-tsx",
    "language-jsx", "language-scss", "language-diff", "language-elixir",
    "language-hcl", "language-zig", "language-scala", "language-php",
    "language-dart",
] }
async-trait = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = true, features = ["unstable-rendered-line-info"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
unicode-width = "0.2"
unicode-segmentation = "1"
toml = "1.0"
tokio = { version = "1.50", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "sync", "net", "io-util", "process", "signal",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pulldown-cmark = { version = "0.13", default-features = false }
mime_guess = "2"
shellexpand = "3.1"
directories = { workspace = true }
fluent = "0.16"
unic-langid = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
