[package]
name = "aardvark-sys"
version = "0.1.0"
edition = "2024"
authors = ["theonlyhennygod"]
license = "MIT OR Apache-2.0"
description = "Low-level bindings for the Total Phase Aardvark I2C/SPI/GPIO USB adapter"
repository = "https://github.com/zeroclaw-labs/zeroclaw"

# NOTE: This crate is the ONLY place in ZeroClaw where unsafe code is permitted.
# The rest of the workspace remains #![forbid(unsafe_code)].
#
# The Total Phase SDK is loaded at runtime via libloading (see src/lib.rs); the
# vendored library lives in vendor/aardvark.so and FFI symbols are resolved
# dynamically (no build-time bindgen). If no compatible library is found, every
# AardvarkHandle method returns Err(AardvarkError::LibraryNotFound).

[dependencies]
libloading = "0.8"
thiserror = "2.0"
