[package]
name = "zeroclaw-api"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Trait definitions and shared types for ZeroClaw — the API layer."
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["sync", "process", "macros", "rt"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
parking_lot = "0.12"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
