[package]
name = "zeroclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel implementations for messaging platform integrations."
publish = false

[dependencies]
zeroclaw-api.workspace = true
zeroclaw-infra.workspace = true
zeroclaw-config = { workspace = true, default-features = false }
zeroclaw-log.workspace = true
zeroclaw-memory.workspace = true
zeroclaw-providers.workspace = true
zeroclaw-runtime.workspace = true
zeroclaw-tool-call-parser.workspace = true
zeroclaw-tools.workspace = true
anyhow = "1.0"
lru = "0.16"
rumqttc = { version = "0.25", optional = true }
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "macros",
  "query",
  "tokio",
  "ws",
] }
async-imap = { version = "0.11", features = [
  "runtime-tokio",
], default-features = false, optional = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
hmac = "0.12"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
], optional = true }
lettre = { version = "0.11.22", default-features = false, features = [
  "builder",
  "rustls-tls",
  "smtp-transport",
], optional = true }
pulldown-cmark = { version = "0.13", optional = true }
mail-parser = { version = "0.11.2", optional = true }
matrix-sdk = { version = "0.17", optional = true, default-features = false, features = [
  "e2e-encryption",
  "markdown",
  "sqlite",
] }
mime_guess = { version = "2", optional = true }
nostr-sdk = { version = "0.44", default-features = false, features = [
  "nip04",
  "nip59",
], optional = true }
parking_lot = "0.12"
portable-atomic = "1"
prost = { version = "0.14", default-features = false, features = [
  "derive",
], optional = true }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
  "__rustls-ring",
  "json",
  "multipart",
  "rustls-tls-webpki-roots-no-provider",
  "stream",
] }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7", default-features = false }
toml = "1.0"
urlencoding = "2.1"
uuid = { version = "1.22", default-features = false, features = ["std", "v4"] }
hex = "0.4"
nanohtml2text = "0.2"
rand = "0.10"
webpki-roots = "1.0.6"
tokio-socks = "0.5"

# WhatsApp Web (optional)
# Upstream crates from oxidezap/whatsapp-rust, temporarily pinned to commit
# 9734fb2 (the MSRV-fix branch carrying oxidezap/whatsapp-rust#632). The
# published 0.6.0 crate uses an `if let` guard at wacore/src/history_sync.rs:93
# that is stable only on Rust 1.94+; ZeroClaw CI pins 1.93.0. Pinning via a
# plain `git` source (not `[patch.crates-io]`) keeps the workspace buildable
# until oxidezap publishes the fix as 0.6.1, at which point this block
# reverts to versioned crates.io deps.
# Fixes the post-2026-04-24 WhatsApp Web protocol break (#6246).
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true, default-features = false, features = [
  "tokio-runtime",
] }
wacore = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true, default-features = false }
wacore-binary = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true, default-features = false }
waproto = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true, default-features = false }
serde-big-array = { version = "0.5", optional = true }

cpal = { version = "0.15", optional = true }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true }
whatsapp-rust-tokio-transport = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "9734fb2ec544e22b7055147aa3e73b6889e3ff0d", optional = true, default-features = false }
qrcode = { version = "0.14", optional = true }
# `bytes` is required for the `Bytes` return types in wacore 0.6 storage
# traits (SignalStore::get_session / load_prekey). Feature-gated to
# whatsapp-web alongside the rest of the WA Web stack.
bytes = { version = "1", optional = true }
shellexpand = "3.1"

# WeChat iLink (optional) — AES-128-ECB and MD5 are mandated by the iLink
# Bot media encryption protocol. The CDN requires ECB-mode ciphertext and
# MD5 file checksums in upload requests. Not our choice of primitives.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
ecb = { version = "0.1", optional = true }
md5 = { version = "0.8", optional = true }

[features]
default = [
  "channel-acp-server",
  "channel-bluesky",
  "channel-clawdtalk",
  "channel-dingtalk",
  "channel-discord",
  "channel-imessage",
  "channel-irc",
  "channel-linq",
  "channel-mattermost",
  "channel-mochat",
  "channel-nextcloud",
  "channel-notion",
  "channel-qq",
  "channel-reddit",
  "channel-signal",
  "channel-slack",
  "channel-twitter",
  "channel-voice-call",
  "channel-wati",
  "channel-webhook",
  "channel-wecom",
  "channel-wecom-ws",
  "channel-whatsapp-cloud",
]
# Channels with optional deps
channel-email = ["dep:async-imap", "dep:lettre", "dep:mail-parser", "dep:pulldown-cmark"]
channel-telegram = ["dep:image"]
channel-lark = ["dep:prost"]
channel-line = []
channel-nostr = ["dep:nostr-sdk"]
whatsapp-web = [
  "dep:bytes",
  "dep:prost",
  "dep:qrcode",
  "dep:serde-big-array",
  "dep:wacore",
  "dep:wacore-binary",
  "dep:waproto",
  "dep:whatsapp-rust",
  "dep:whatsapp-rust-tokio-transport",
  "dep:whatsapp-rust-ureq-http-client",
]
# Channels with no optional deps (cfg gate only)
channel-discord = []
channel-slack = []
channel-signal = []
channel-mattermost = []
channel-irc = []
channel-imessage = []
channel-dingtalk = []
channel-qq = []
channel-bluesky = []
channel-twitter = []
channel-reddit = []
channel-notion = []
channel-mqtt = ["dep:rumqttc"]
channel-linq = []
channel-wati = []
channel-nextcloud = []
channel-mochat = []
channel-wechat = [
  "dep:aes",
  "dep:ecb",
  "dep:md5",
  "dep:mime_guess",
  "dep:qrcode",
]
channel-wecom = []
channel-wecom-ws = ["dep:aes", "dep:cbc"]
channel-clawdtalk = []
channel-webhook = []
channel-whatsapp-cloud = []
channel-voice-call = []
channel-acp-server = []
channel-matrix = ["dep:matrix-sdk", "dep:mime_guess"]
voice-wake = ["dep:cpal"]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "tokio",
] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
] }
tempfile = "3.26"
toml = "1.0"
wiremock = "0.6"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
